src/scripts/components/stories/story/blocks/image-gallery/modules/image-carousel/image-carousel.module.css
.container {
  display: flex;
  flex-direction: column;
  height: 100vh;
  font-size: 1.25rem;
}

.wrapper {
  display: flex;
  flex-direction: column;
  padding: 0 var(--story-padding);
  align-items: center;
  justify-content: space-evenly;
  width: 100%;
  height: fit-content;
  gap: 2rem;

  @media screen and (--desktop-viewport) {
    padding: 0;
    grid-column: 2 / -1;
  }

  @media screen and (--mobile-viewport) {
    height: 100%;
  }

  .slidesContainer {
    position: relative;
    width: 100%;
    overflow: hidden;

    .track {
      display: flex;
      gap: 24px;
    }
  }

  .headerText {
    @media (--desktop-viewport) {
      font-size: 1.875rem;
      font-weight: 700;
      line-height: 140%; /* 42px */
    }
  }
  .readMore {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 12px;
    z-index: 1;

    @media (--desktop-viewport) {
      margin-top: 7.5rem;
      text-shadow: 0 2px 1px rgba(0, 0, 0, 0.48);
      font-size: 1.875rem;
      font-weight: 700;
      line-height: 140%; /* 42px */
    }

    .readMoreButton {
      height: 40px;
      padding: 0 12px;
      border-radius: 40px;
      background: var(--dark-blue);
      display: flex;
      justify-content: center;
      align-items: center;
      width: fit-content;

      > span {
        font-size: 0.75rem;
      }

      > svg {
        width: 0.75rem;
        height: 0.75rem;
      }

      &:hover {
        > svg {
          fill: var(--main-esa-teal);
        }
      }
    }
  }
}

